<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <com.odoo.widgets.parallax.ParallaxScrollView
        android:id="@+id/parallaxScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="@dimen/statusBarHeight">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/parallax_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-56dp">

            </FrameLayout>

            <TextView
                android:id="@android:id/title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/parallax_view"
                android:fontFamily="@string/font_normal"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/default_16dp"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/title"
                android:background="#ffffff"
                android:orientation="vertical"
                android:paddingTop="@dimen/default_16dp"
                android:weightSum="1">

                <odoo.controls.OForm
                    android:id="@+id/riskForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:modelName="isg.risk_assesment">

                    <odoo.controls.OField
                        android:id="@+id/is_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="is_company"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        app:showLabel="false">

                    </odoo.controls.OField>




                    <odoo.controls.OField
                        android:id="@+id/partner_id"
                        app:controlLabel="@string/partner_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldLabelColor="@color/theme_secondary"
                        app:fieldName="partner_id"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                         >

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:id="@+id/assesment_method"
                        app:controlLabel="@string/assesment_method"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldLabelColor="@color/theme_secondary"
                        app:fieldName="assesment_method"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        >
                    <!--  app:iconResource="@drawable/ic_action_phone"-->
                 </odoo.controls.OField>

                <!-- <odoo.controls.OField
                     android:id="@+id/procedure_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:fieldLabelColor="@color/theme_secondary"
                     app:fieldName="procedure_id"
                     app:fieldTextAppearance="?android:textAppearanceMedium"
                     app:iconResource="@drawable/ic_action_mobile"></odoo.controls.OField>-->


                    <!--<View
                        style="@style/ViewSeparator"
                        android:layout_marginLeft="72dp" />-->
                    <odoo.controls.OField
                        android:id="@+id/subject"
                        app:controlLabel="@string/subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldLabelColor="@color/theme_secondary"
                        app:fieldName="subject"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        >

                    </odoo.controls.OField>
                        <odoo.controls.OField
                        android:id="@+id/date_performed"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:controlLabel="@string/date_performed"
                        app:fieldLabelColor="@color/theme_secondary"
                        app:fieldName="date_performed"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        >

                        </odoo.controls.OField>

                    <odoo.controls.OField
                        android:id="@+id/date_valid_before"
                        app:controlLabel="@string/date_valid_before"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldLabelColor="@color/theme_secondary"
                        app:fieldName="date_valid_before"
                        app:fieldTextAppearance="?android:textAppearanceMedium">

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:id="@+id/date_updated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:controlLabel="@string/date_updated"
                        app:fieldLabelColor="@color/theme_secondary"
                        app:fieldName="date_updated"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                         >

                    </odoo.controls.OField>


                </odoo.controls.OForm>
            </LinearLayout>

        </RelativeLayout>
    </com.odoo.widgets.parallax.ParallaxScrollView>

    <ScrollView
        android:id="@+id/riskScrollViewEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/statusBarHeight"
        android:visibility="gone">

        <odoo.controls.OForm
            android:id="@+id/riskFormEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            app:modelName="isg.risk_assesment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/parallax_view_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-60dp">

                    <ImageView
                        android:id="@android:id/icon1"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/user_xlarge" />

                </FrameLayout>

                <View
                    style="@style/ViewSeparator"
                    android:layout_below="@+id/parallax_view_edit"
                    android:layout_marginTop="60dp"
                    android:background="#f3f3f3" />

                <ImageView
                    android:id="@+id/captureImage"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/parallax_view_edit"
                    android:layout_marginRight="@dimen/default_16dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/circle_mask_primary"
                    android:elevation="4dp"
                    android:padding="@dimen/default_8dp"
                    android:src="@drawable/ic_action_camera"
                    android:tint="#ffffff" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/parallax_view_edit"
                    android:layout_marginTop="72dp"
                    android:orientation="vertical">

                    <odoo.controls.OField
                        android:id="@android:id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/default_8dp"
                        app:fieldName="name"
                        app:fieldTextAppearance="?android:textAppearanceLarge"
                        app:showIcon="false"
                        app:showLabel="false">

                    </odoo.controls.OField>

                    <View style="@style/ViewSeparator" />

                    <odoo.controls.OField
                        android:id="@+id/is_company_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="is_company"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        app:showLabel="false">

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:id="@+id/parent_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="parent_id"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        app:showLabel="false"
                        app:widgetType="SearchableLive">

                    </odoo.controls.OField>

                    <View
                        style="@style/ViewSeparator"
                        android:layout_marginLeft="72dp" />

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="street"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        app:iconResource="@drawable/ic_action_location">

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="street2"
                        app:fieldTextAppearance="?android:textAppearanceMedium">

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="city"
                        app:fieldTextAppearance="?android:textAppearanceMedium">

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="zip"
                        app:fieldTextAppearance="?android:textAppearanceMedium">

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="country_id"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        app:widgetType="SearchableLive">

                    </odoo.controls.OField>

                    <!--<View
                        style="@style/ViewSeparator"
                        android:layout_marginLeft="72dp" />-->

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="email"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        >

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="website"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        >

                    </odoo.controls.OField>

                    <View
                        style="@style/ViewSeparator"
                        android:layout_marginLeft="72dp" />


                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="phone"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        >

                    </odoo.controls.OField>

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="mobile"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                      >
                    </odoo.controls.OField>

                    <View
                        style="@style/ViewSeparator"
                        android:layout_marginLeft="72dp" />

                    <odoo.controls.OField
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:fieldName="comment"
                        app:fieldTextAppearance="?android:textAppearanceMedium"
                        app:iconResource="@drawable/ic_action_notes_content">

                    </odoo.controls.OField>

                </LinearLayout>


            </RelativeLayout>
        </odoo.controls.OForm>

    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/android_orange"
        android:minHeight="?attr/actionBarSize"
        android:paddingRight="@dimen/default_8dp"
        android:paddingTop="@dimen/statusBarHeight"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ToolBarTheme"
        android:backgroundTint="@color/abc_background_cache_hint_selector_material_dark" />

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:choiceMode="singleChoice"
        android:textFilterEnabled="false"
        style="@style/AppBar.Dark"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:headerDividersEnabled="false"
        android:clickable="true"
        android:theme="@style/AppBar.Dark"
        android:layout_marginTop="25dp"
        android:foregroundTint="#4264fc05" />

</RelativeLayout>
